# Project-hannibal

./: .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  DesignBoard.html  README.md  copilotkit-docs.md  current-problem.md  docker-compose.yml  graph-web.json  justfile  package.json  plan_otp.md  rules.md
backend/: .coverage  .dockerignore  Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 50478dfd04ca_create_users_table.py  7271b37d4d63_add_user_course_and_lesson_progress.py  810bdb8858ca_adding_course_lesson_and_tags.py  9ba532e50095_add_order_to_lessons.py  a1b2c3d4e5f6_add_provider_oauth_id_refresh_tokens.py  b3c4d5e6f7a8_add_preference_keys_and_users_preference_id.py  c5d6e7f8a9b0_add_course_recommendation_tables.py  c9d8e7f6a5b4_add_name_to_users.py  d7e8f9a0b1c2_add_rce_packages.py  e8f9a0b1c2d3_add_feature_flags.py  ed27b1182b5a_adding_role_to_user.py  f1a2b3c4d5e6_add_info_to_courses_and_lessons.py
backend/app/: copilotkit_routes.py  main.py  middleware.py
backend/app/agent/: context_utils.py  graph.py  user_context.py
backend/app/api/: router.py
backend/app/core/: config.py  google_genai.py  logging.py
backend/app/db/: mongo.py  session.py
backend/app/dependencies/: access.py  auth.py  build_block.py  course.py  db.py  dsl.py  feature_flag.py  health.py  lesson_block.py  node.py  progress.py  rce.py  rce_packages.py  tags.py  user_preference.py
backend/app/exception/: rce_exception.py
backend/app/models/: __init__.py  build_block_model.py  course_embedding_model.py  course_model.py  course_related_course_model.py  feature_flag_model.py  lesson_block_model.py  lesson_embedding_model.py  lesson_model.py  node_model.py  preference_key_model.py  rce_package_model.py  refresh_token.py  tags_model.py  user.py  user_course_progress_model.py  user_lesson_progress_model.py  user_preference_model.py
backend/app/repositories/: base.py  build_block_repository.py  course_repository.py  feature_flag_repository.py  health_repository.py  lesson_block_repository.py  lesson_repository.py  node_repository.py  preference_key_repository.py  progress_repository.py  rce_package_repository.py  refresh_token_repository.py  tags_repository.py  user_preference_repository.py  user_repository.py
backend/app/schemas/: auth.py  block.py  build_block.py  course.py  feature_flag.py  health.py  lesson.py  (+8 more)
backend/data/: popular_packages.json
backend/scripts/: seed_rce_packages.py
backend/tests/: conftest.py  helpers.py  test_admin_feature_flag_controller.py  test_auth_controller.py  test_auth_service.py  test_block_controller.py  test_build_block_controller.py  test_build_block_repository.py  test_build_block_service.py  test_config.py  test_copilotkit_controller.py  test_course_controller.py  test_course_repository.py  test_course_service.py  test_dependencies.py  test_dsl_service.py  test_embedding_service.py  test_feature_flag_controller.py  test_feature_flag_repository.py  test_feature_flag_service.py  test_google_genai.py  test_health.py  test_health_repository.py  test_lesson_block_controller.py  test_lesson_block_repository.py  test_lesson_block_service.py  test_lesson_controller.py  test_lesson_repository.py  test_lesson_service.py  test_main.py  test_node_controller.py  test_node_repository.py  test_node_service.py  test_package_search_service.py  test_progress_controller.py  test_progress_repository.py  test_progress_service.py  test_rce.py  test_rce_cache.py  test_rce_controller.py  (+22 more)
emu-service/: Cargo.toml  Dockerfile  README.md
rce-service/: .coverage  .dockerignore  Dockerfile  README.md  pyproject.toml
rce-service/rce_service/: config.py  consumer.py  contracts.py  dependency_errors.py  docker.py  exceptions.py  handlers.py  installer.py  main.py  prewarm.py  result.py  settings.py
rce-service/tests/: test_consumer.py  test_contracts.py  test_dep_errors.py  test_docker.py  test_handlers.py  test_rce_cache.py  test_rce_deps.py  test_rce_install_queue.py  test_rce_installer.py  test_rce_security_invariants.py  test_two_phase.py
(+482 files in other folders)
