[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.1.0",
    "pydantic[email]>=2.13.3",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.34.2",
    "copilotkit>=0.1.87",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "python-multipart>=0.0.20",
    "beanie>=2.1.0",
    "pgvector>=0.3.6",
    "aio-pika>=9.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["alembic", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "UP042", "UP046"]

[tool.black]
line-length = 88
target-version = ["py314"]
exclude = "(alembic/|.venv/)"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "black>=26.5.1",
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.15",
]
